Changes to get reverse crits working again for DECO3800

--- a/app/index.html
+++ b/app/index.html
@@ -99,6 +99,7 @@
     <script src="scripts/components/critique/View.js"></script>
 
     <script src="scripts/directives/SiteHeader.js"></script>
+    <script src="scripts/directives/Saved.js"></script>
     <script src="scripts/controllers/Front.js"></script>
 
 
